# shadowsocks-qt5

./: .gitignore  .qmake.conf  .travis.yml  CMakeLists.txt  README.md  a.txt  gui-config.json  icons.qrc  ip4validator.h  logdialogue.cpp  logdialogue.h  logdialogue.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portvalidator.cpp  profiles.cpp  profiles.h  shadowsocks-qt5.desktop  shadowsocks-qt5.pro  ss-qt5.rc  ss_process.cpp  ss_process.h  ssprofile.h
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  addprofiledialog.cpp  addprofiledialog.h  addprofiledialog.ui  addprofiledialogue.cpp  addprofiledialogue.h  addprofiledialogue.ui  confighelper.cpp  confighelper.h  configuration.cpp  configuration.h  connection.cpp  connection.h  connectionitem.cpp  connectionitem.h  connectiontablemodel.cpp  connectiontablemodel.h  controllerthread.cpp  controllerthread.h  editdialog.cpp  editdialog.h  editdialog.ui  icons.qrc  ip4validator.cpp  ip4validator.h  libshadowsocksthread.cpp  libshadowsocksthread.h  logdialog.cpp  logdialog.h  logdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portvalidator.cpp  portvalidator.h  profiles.cpp  profiles.h  qrcodecapturer.cpp  qrcodecapturer.h  (+37 more)
src/i18n/: ss-qt5_zh_CN.qm  ss-qt5_zh_CN.ts  ss-qt5_zh_TW.qm  ss-qt5_zh_TW.ts  ssqt5_zh_CN.qm  ssqt5_zh_CN.ts
src/icon/breeze/: index.theme
src/icons/: shadowsocks-qt5.icns
src/icons/Breeze/actions/: .directory
